test: fix testing environment on Ktor